--- a/components/Tags/styles/styles.css
+++ b/components/Tags/styles/styles.css
@@ -1,3 +1,7 @@
+.tags {
+  scrollbar-width: thin !important;
+}
+
 .tags::-webkit-scrollbar {
   width: 10px;
   height: 10px;
